# project-aryatrb

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.ninja  cmake_install.cmake  state  state.cbp
.cmake/api/v1/reply/: cache-v2-57a4c13867ed962e4705.json  cache-v2-917f4d087d054fd9c233.json  cmakeFiles-v1-0a9b354eaed0551f65cb.json  cmakeFiles-v1-73b73c69b4205c8fa42c.json  cmakeFiles-v1-bb2e81bb890749c47473.json  codemodel-v2-4fce081e72f53e4d58f4.json  codemodel-v2-999687af01007d02b548.json  codemodel-v2-adb60c298bda467d3539.json  index-2022-02-09T09-33-35-0870.json  index-2022-02-10T14-47-27-0343.json  (+4 more)
assets/leaderboard/: users_list.txt
assets/leaderboard/1users_files/: .txt  arya.txt
assets/save/: files_details.txt
assets/save/maps/: map1  map1.txt  map10  map10.txt  map100.txt  map101.txt  map102.txt  map103.txt  map104.txt  map105.txt  map106.txt  map107.txt  map108.txt  map109.txt  map11  map11.txt  map110.txt  map111.txt  map112.txt  map113.txt  map114.txt  map115.txt  map116.txt  map117.txt  map118.txt  map119.txt  map12  map12.txt  map120.txt  map121.txt  map122.txt  map123.txt  map124.txt  map125.txt  map126.txt  map127.txt  map128.txt  map129.txt  map13  map13.txt  (+247 more)
sdl2/SDL2_mixer-2.0.4/: config.status  libtool
src/: load_everything.h  load_everythingc.c  main.c  operations_of_the_game.c  operations_of_the_game.h  rendercpy.c  rendercpy.h  the_pages_themselves.c  the_pages_themselves.h  variables.h
windows/tate/: tate.cbp  tate.depend
windows/tate/src/: load_everything.h  main.c  operations_of_the_game.c
(+101 files in other folders)
