cmake_minimum_required(VERSION 3.0)
project(state C)
set(CMAKE_C_STANDARD 99)
file(GLOB_RECURSE SOURCE "src/*.c" "src/*.h")
# add_executable(state rendercpy.c the_pages_themselves.c operations_of_the_game.c load_everything_c.c)
add_executable("${PROJECT_NAME}" "${SOURCE}" src/rendercpy.c src/load_everythingc.c src/the_pages_themselves.c src/operations_of_the_game.c)
include_directories("/usr/include/SDL2")
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/sdl2/SDL2_mixer-2.0.4)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/sdl2/SDL2_ttf-2.0.12)
target_link_libraries(state m SDL2 SDL2_gfx SDL2_ttf SDL2_mixer)
link_directories("/usr/share/doc")
